# s3filechecker

./: .gitignore  README.md  pyproject.toml
s3filechecker/: cli.py
